fixing the alignments

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -214,6 +214,9 @@ footer img {
 	    width: calc(100% - 30px);
 	    margin-top: 10px;
 	}
+	.bg-peach .text-right{
+		text-align:center !important;
+	}
 	.badge .ticker {
 		right:39%
 	}
